<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 by Francis Gálvez.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    style="@style/ScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fruit_image"
                style="@style/ImageStyle"
                android:contentDescription="@string/category_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fruit_name"
                    style="@style/MainText"
                    tools:text="Tomato" />

                <TextView
                    android:id="@+id/fruit_supplier"
                    style="@style/SecondaryText"
                    tools:text="Supplier" />

                <TextView
                    android:id="@+id/fruit_price"
                    style="@style/SecondaryText"
                    tools:text="1.87 $/kg" />

                <TextView
                    android:id="@+id/fruit_quantity"
                    style="@style/SecondaryText"
                    tools:text="Quantity: 10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/activity_margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/increase_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:background="@color/colorAccent"
                    android:text="+"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/buy_text"
                    style="@style/SecondaryText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="0dp"
                    android:maxWidth="75dp"
                    android:text="@string/category_quantity" />

                <Button
                    android:id="@+id/decrease_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@color/colorAccent"
                    android:text="-"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/shipment_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/ic_shipment" />

                <TextView
                    style="@style/SecondaryText"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="8dp"
                    android:maxWidth="75dp"
                    android:text="@string/ask_for_more" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_margin">

            <TextView
                android:id="@+id/quantity_ordered"
                style="@style/SecondaryText"
                android:layout_marginLeft="0dp"
                android:textAllCaps="true"
                tools:text="QUANTITY ORDERED = 10" />

            <TextView
                android:id="@+id/total_order"
                style="@style/MainText"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:textAllCaps="true"
                tools:text="TOTAL: 10.70 $" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>